<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backGroundConsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_light"
    tools:context=".MainActivity">


   <com.google.android.material.tabs.TabLayout
       android:id="@+id/tabLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:tabIndicatorGravity="top">

      <com.google.android.material.tabs.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tab_layout_memo" />

      <com.google.android.material.tabs.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tab_layout_category" />

      <com.google.android.material.tabs.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tab_layout_calendar" />

      <com.google.android.material.tabs.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tab_layout_my_info" />
   </com.google.android.material.tabs.TabLayout>

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/btnAddMemo"
       android:layout_width="60dp"
       android:layout_height="60dp"
       android:layout_marginBottom="40dp"
       android:background="@drawable/buttonshape"
       android:elevation="1dp"
       android:soundEffectsEnabled="true"
       android:stateListAnimator="@null"
       android:text="@string/btnAddMemoInnerContent"
       android:textColor="#000000"
       android:textSize="34sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

   <androidx.viewpager2.widget.ViewPager2
       android:id="@+id/viewPager"
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintBottom_toTopOf="@+id/tabLayout"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/addMemoConsLayout"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

   </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>